%% Build and check from R:
%% news(db = tools:::.build_news_db_from_package_NEWS_Rd("<Matrix>/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R{} Package \pkg{Matrix}}
\encoding{UTF-8}
%% NB: The date (yyyy-mm-dd) is the "Packaged: " date in ../DESCRIPTION
\section{Changes in version 1.6-2 (2023-08-18 r4269)}{
  \subsection{New Features}{
    \itemize{
      \item \code{sort(<sparseVector>, na.last=, decreasing=)} now works.
      Non-structural zeros are sorted as \dQuote{greater than} structural
      zeros.

      \item \code{mean(<sparseVector>, trim=)} now works efficiently
      for nonzero values of \code{trim}, thanks in part to the above
      mentioned \code{sort} method.

      \item \code{rep(<sparseVector>, each=)} now works efficiently,
      avoiding \code{rep(., times = rep(each, times = length(.)))}.

      \item \code{.m2dense} and \code{.m2sparse} gain an argument
      \code{trans} indicating if vectors that are not matrices should
      be coerced to 1-row matrices rather than 1-column matrices.
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item Methods for \code{cbind2} and \code{rbind2} did not in all
      cases handle vectors as 1-column and 1-row matrices, respectively.

     \item \code{rcond(<0-by-0>)} now returns \code{Inf}; see \PR{18543}.

      \item \code{round(<dp[op]Matrix>)} and \code{signif(<dp[op]Matrix>)}
      now return \code{ds[yp]Matrix} rather than \code{dp[op]Matrix} and
      now discard \code{factors}.

      \item Methods for \code{length} now return \code{integer} rather
      than \code{double} if the result does not exceed \code{INT_MAX}.

      \item Methods for subscripting \code{sparseVector} did not behave
      compatibly with \pkg{base} when supplied with fractional, \code{NA},
      or out-of-bounds subscripts.
    }
  }
  \subsection{Misc}{
    \itemize{
      \item .
    }
  }
}
\section{Changes in version 1.6-1 (2023-08-11 r4228)}{
  \subsection{New Features}{
    \itemize{