@@ -78,7 +78,8 @@ body(..M2tri)[[2L]][[2L]][[2L]][[2L]][[3L]] <-
 .ind2sparse <- function(from, kind = "n", repr = ".")
     .Call(R_index_as_sparse, from, kind, repr)
 
-.m2dense <- function(from, class, uplo = "U", diag = "N", trans = FALSE)
+.m2dense <- function(from, class = ".ge", uplo = "U", diag = "N",
+                     trans = FALSE)
     .Call(R_matrix_as_dense, from, class, uplo, diag, trans)
 
 .m2dense.checking <- function(from, kind = ".", ...) {
@@ -104,7 +105,8 @@ body(..M2tri)[[2L]][[2L]][[2L]][[2L]][[3L]] <-
         .m2dense(from, paste0(kind, "ge"), NULL, NULL)
 }
 
-.m2sparse <- function(from, class, uplo = "U", diag = "N", trans = FALSE)
+.m2sparse <- function(from, class = ".gC", uplo = "U", diag = "N",
+                      trans = FALSE)
     .Call(R_matrix_as_sparse, from, class, uplo, diag, trans)
 
 .m2sparse.checking <- function(from, kind = ".", repr = "C", ...) {
