@@ -4,7 +4,7 @@
 \title{News for \R{} Package \pkg{Matrix}}
 \encoding{UTF-8}
 %% NB: The date (yyyy-mm-dd) is the "Packaged: " date in ../DESCRIPTION
-\section{Changes in version 1.6-2 (2023-08-18 r4269)}{
+\section{Changes in version 1.6-2 (2023-08-18 r4283)}{
   \subsection{New Features}{
     \itemize{
       \item \code{sort(<sparseVector>, na.last=, decreasing=)} now works.
@@ -21,6 +21,14 @@
       \item \code{.m2dense} and \code{.m2sparse} gain an argument
       \code{trans} indicating if vectors that are not matrices should
       be coerced to 1-row matrices rather than 1-column matrices.
+
+	  \item \code{.m2dense} and \code{.m2sparse} can be called
+      with one argument.  Their \code{class} arguments admit new
+      default values \code{".ge"} and \code{".gC"}.
+
+      \item New exports \code{.M2V} and \code{.m2V}, for coercing
+      \code{Matrix} and \code{matrix} (and in fact \code{vector})
+      to \code{sparseVector}.
     }
   }
   \subsection{Bug Fixes}{
@@ -28,7 +36,7 @@
       \item Methods for \code{cbind2} and \code{rbind2} did not in all
       cases handle vectors as 1-column and 1-row matrices, respectively.
 
-     \item \code{rcond(<0-by-0>)} now returns \code{Inf}; see \PR{18543}.
+      \item \code{rcond(<0-by-0>)} now returns \code{Inf}; see \PR{18543}.
 
       \item \code{round(<dp[op]Matrix>)} and \code{signif(<dp[op]Matrix>)}
       now return \code{ds[yp]Matrix} rather than \code{dp[op]Matrix} and
@@ -44,7 +52,8 @@
   }
   \subsection{Misc}{
     \itemize{
-      \item .
+      \item C code now refers to the symbol \code{factors} as
+      \code{Matrix_factorsSym}, rather than \code{Matrix_factorSym}.
     }
   }
 }
